--------------------------------

1.4.0   02/21/10

Changed the architecture of stats.py to one that uses very late binding. The
SQL statements are not run until template evaluation. This reduces
the amount of memory required (by about 10MB), reduces memory fragmentation, 
as well as greatly simplifying the code (file stats.py shed 100 lines of code).
Execution time is approximately the same.

Added option week_start. Default is 6 (Sunday).

Fixed reporting bug when the reporting time falls on a calendar month or
year boundary.

1.3.4   02/08/10

Fixed problem when plotting data where all data points are bad (None).

1.3.3   01/10/10

Fixed reporting bug that shows itself if rain year does not start in January.

1.3.2   12/26/09

LOOP data added to stats database.

1.3.1   12/22/09

Added a call to syslog.openlog() that inadvertently got left out when 
switching to the engine driven architecture.

1.3.0   12/21/09

Moved to a very different architecture to drive weewx. Consists of an engine,
that manages a list of 'services.' At key events, each service is given
a chance to participate. Services are easy to add, to allow easy
customization. An example is offered of an 'alarm' service.

Checking the clock of the weather station for drift is now a service, so
the option clock_check was moved from the station specific [VantagePro]
section to the more general [Station] section.

Added an example service 'MyAlarm', which sends out an email should the
outside temperature drop below 40 degrees.

In a similar manner, all generated files, images, and reports are the
product of a report engine, which can run any number of reports. New reports
are easily added.

Moved the compass rose used in progressive vector plots into the interior
of the plot.

Install now deletes public_html/#upstream.last, thus forcing all files to
be uploaded to the web server at the next opportunity.
 
1.2.0   11/22/09

Added progressive vector plots for wind data.
